# hrf-universe-home-task

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
home_task/: __init__.py  app.py  db.py  models.py
home_task/api/: endpoint.py
home_task/cli/: stats.py
migrations/versions/: 2632678c2627_added_statistic_table.py
